[package]
name = "hypercore_handshake"
version = "0.1.0"
edition = "2024"

[dependencies]
sha2 = "0.10"
tracing = "0.1.40"
crypto_secretstream = "0.2"
rand = "0.8"
snow = { version = "0.10", features = ["risky-raw-split"] }
thiserror = "2.0.12"
blake2 = "0.10"
futures = "0.3.31"
hypercore = "0.15.0"
curve25519-dalek = "4"

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros",  "rt-multi-thread", "time" ] }
