[package]
name = "hypercore_handshake"
version = "0.3.0"
edition = "2024"
description = "Used for establishing an encrypted connection between hypercore peers"
license = "MIT OR Apache-2.0"
documentation = "https://docs.rs/hypercore_handshake"
repository = "https://github.com/cowlicks/hypercore_handshake"

[dependencies]
sha2 = "0.10"
tracing = "0.1.40"
crypto_secretstream = "0.2"
rand = "0.8"
snow = { version = "0.10", features = ["risky-raw-split"] }
thiserror = "2.0.12"
blake2 = "0.10"
futures = "0.3.31"
curve25519-dalek = "4"
ed25519-dalek = { version = "2", features = ["rand_core"] }

[dev-dependencies]
tokio = { version = "1.27.0", features = ["macros",  "rt-multi-thread", "time" ] }
